tests/pass/test_newtype.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import std/io::println

type Addr = u64
alias MyInt = i32

fn main() -> i32 {
    auto a: Addr = 10:Addr
    auto b: u64 = 20
    
    // This should fail (strong type)
    // auto c: Addr = b 
    
    // This should work (weak alias)
    auto d: MyInt = 30
    auto e: i32 = d
    
    println("Newtype tests passed")
    return 0
}
