tests/fail/struct_init.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
shape Point (x: i32, y: i32)

fn main() {
    // 1. Unknown field
    auto p1 = Point(z = 10, y = 20)
    // EXPECT: Shape 'Point' has no field named 'z'

    // 2. Type mismatch
    auto p2 = Point(x = "hello", y = 20)
    // EXPECT: Type mismatch for field 'x': expected i32, got str

    // 3. Missing field
    auto p3 = Point(x = 10)

    // 4. Duplicate field
    auto p4 = Point(x = 10, y = 20, x = 30)
}
